grid view align fix

--- a/public/wp-content/themes/sela-wpcom/overrides.css
+++ b/public/wp-content/themes/sela-wpcom/overrides.css
@@ -13,6 +13,7 @@
     margin-left: 1em;
     margin-right: 1em;
     margin-bottom: 2em;
+    vertical-align: top;
 }
 
 .grid h3 {
